// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generate (configs list) > for md files > basic > generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           | Description            |
| :----------------------------- | :--------------------- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. |

<!-- end auto-generated rules list -->
## Configs
<!-- begin auto-generated configs list -->

|    | Name          |
| :- | :------------ |
| ✅  | \`recommended\` |

<!-- end auto-generated configs list -->"
`;

exports[`generate (configs list) > for md files > when a config description needs to be escaped in table > generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           | Description         |
| :----------------------------- | :------------------ |
| [no-foo](docs/rules/no-foo.md) | Description no-foo. |

<!-- end auto-generated rules list -->
## Configs
<!-- begin auto-generated configs list -->

|    | Name          | Description |
| :- | :------------ | :---------- |
| ✅  | \`recommended\` | Foo\\|Bar    |

<!-- end auto-generated configs list -->"
`;

exports[`generate (configs list) > for md files > when a config exports a description > property=description > generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           | Description            |
| :----------------------------- | :--------------------- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. |

<!-- end auto-generated rules list -->
  ## Configs
  <!-- begin auto-generated configs list -->

|    | Name          | Description                              |
| :- | :------------ | :--------------------------------------- |
|    | \`foo\`         |                                          |
| ✅  | \`recommended\` | This config has the recommended rules... |

<!-- end auto-generated configs list -->"
`;

exports[`generate (configs list) > for md files > when a config exports a description > property=meta.description > generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           | Description            |
| :----------------------------- | :--------------------- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. |

<!-- end auto-generated rules list -->
  ## Configs
  <!-- begin auto-generated configs list -->

|    | Name          | Description                              |
| :- | :------------ | :--------------------------------------- |
|    | \`foo\`         |                                          |
| ✅  | \`recommended\` | This config has the recommended rules... |

<!-- end auto-generated configs list -->"
`;

exports[`generate (configs list) > for md files > when a config exports a description > property=meta.docs.description > generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           | Description            |
| :----------------------------- | :--------------------- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. |

<!-- end auto-generated rules list -->
  ## Configs
  <!-- begin auto-generated configs list -->

|    | Name          | Description                              |
| :- | :------------ | :--------------------------------------- |
|    | \`foo\`         |                                          |
| ✅  | \`recommended\` | This config has the recommended rules... |

<!-- end auto-generated configs list -->"
`;

exports[`generate (configs list) > for md files > when all configs are ignored > generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           | Description            |
| :----------------------------- | :--------------------- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. |

<!-- end auto-generated rules list -->
## Configs
<!-- begin auto-generated configs list -->
<!-- end auto-generated configs list -->"
`;

exports[`generate (configs list) > for md files > when there are no configs > generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           | Description            |
| :----------------------------- | :--------------------- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. |

<!-- end auto-generated rules list -->
## Configs
<!-- begin auto-generated configs list -->
<!-- end auto-generated configs list -->"
`;

exports[`generate (configs list) > for md files > with --config-format > generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           | Description            |
| :----------------------------- | :--------------------- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. |

<!-- end auto-generated rules list -->
## Configs
<!-- begin auto-generated configs list -->

|    | Name               |
| :- | :----------------- |
| ✅  | \`test/recommended\` |

<!-- end auto-generated configs list -->"
`;

exports[`generate (configs list) > for md files > with --ignore-config > generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           | Description            |
| :----------------------------- | :--------------------- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. |

<!-- end auto-generated rules list -->
## Configs
<!-- begin auto-generated configs list -->

|    | Name          |
| :- | :------------ |
| ✅  | \`recommended\` |

<!-- end auto-generated configs list -->"
`;

exports[`generate (configs list) > for md files > with configs not defined in alphabetical order > generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           | Description            |
| :----------------------------- | :--------------------- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. |

<!-- end auto-generated rules list -->
## Configs
<!-- begin auto-generated configs list -->

|    | Name          |
| :- | :------------ |
|    | \`foo\`         |
| ✅  | \`recommended\` |

<!-- end auto-generated configs list -->"
`;

exports[`generate (configs list) > for mdx files > basic > generates the documentation 1`] = `
"## Rules
{/* begin auto-generated rules list */}

| Name                       | Description            |
| :------------------------- | :--------------------- |
| [no-foo](rules/no-foo.mdx) | Description of no-foo. |

{/* end auto-generated rules list */}
## Configs
{/* begin auto-generated configs list */}

|    | Name          |
| :- | :------------ |
| ✅  | \`recommended\` |

{/* end auto-generated configs list */}"
`;

exports[`generate (configs list) > for mdx files > when a config description needs to be escaped in table > generates the documentation 1`] = `
"## Rules
{/* begin auto-generated rules list */}

| Name                       | Description         |
| :------------------------- | :------------------ |
| [no-foo](rules/no-foo.mdx) | Description no-foo. |

{/* end auto-generated rules list */}
## Configs
{/* begin auto-generated configs list */}

|    | Name          | Description |
| :- | :------------ | :---------- |
| ✅  | \`recommended\` | Foo\\|Bar    |

{/* end auto-generated configs list */}"
`;

exports[`generate (configs list) > for mdx files > when a config exports a description > property=description > generates the documentation 1`] = `
"## Rules
{/* begin auto-generated rules list */}

| Name                       | Description            |
| :------------------------- | :--------------------- |
| [no-foo](rules/no-foo.mdx) | Description of no-foo. |

{/* end auto-generated rules list */}
## Configs
{/* begin auto-generated configs list */}

|    | Name          | Description                              |
| :- | :------------ | :--------------------------------------- |
|    | \`foo\`         |                                          |
| ✅  | \`recommended\` | This config has the recommended rules... |

{/* end auto-generated configs list */}"
`;

exports[`generate (configs list) > for mdx files > when a config exports a description > property=meta.description > generates the documentation 1`] = `
"## Rules
{/* begin auto-generated rules list */}

| Name                       | Description            |
| :------------------------- | :--------------------- |
| [no-foo](rules/no-foo.mdx) | Description of no-foo. |

{/* end auto-generated rules list */}
## Configs
{/* begin auto-generated configs list */}

|    | Name          | Description                              |
| :- | :------------ | :--------------------------------------- |
|    | \`foo\`         |                                          |
| ✅  | \`recommended\` | This config has the recommended rules... |

{/* end auto-generated configs list */}"
`;

exports[`generate (configs list) > for mdx files > when a config exports a description > property=meta.docs.description > generates the documentation 1`] = `
"## Rules
{/* begin auto-generated rules list */}

| Name                       | Description            |
| :------------------------- | :--------------------- |
| [no-foo](rules/no-foo.mdx) | Description of no-foo. |

{/* end auto-generated rules list */}
## Configs
{/* begin auto-generated configs list */}

|    | Name          | Description                              |
| :- | :------------ | :--------------------------------------- |
|    | \`foo\`         |                                          |
| ✅  | \`recommended\` | This config has the recommended rules... |

{/* end auto-generated configs list */}"
`;

exports[`generate (configs list) > for mdx files > when all configs are ignored > generates the documentation 1`] = `
"## Rules
{/* begin auto-generated rules list */}

| Name                       | Description            |
| :------------------------- | :--------------------- |
| [no-foo](rules/no-foo.mdx) | Description of no-foo. |

{/* end auto-generated rules list */}
## Configs
{/* begin auto-generated configs list */}
{/* end auto-generated configs list */}"
`;

exports[`generate (configs list) > for mdx files > when there are no configs > generates the documentation 1`] = `
"## Rules
{/* begin auto-generated rules list */}

| Name                       | Description            |
| :------------------------- | :--------------------- |
| [no-foo](rules/no-foo.mdx) | Description of no-foo. |

{/* end auto-generated rules list */}
## Configs
{/* begin auto-generated configs list */}
{/* end auto-generated configs list */}"
`;

exports[`generate (configs list) > for mdx files > with --config-format > generates the documentation 1`] = `
"## Rules
{/* begin auto-generated rules list */}

| Name                       | Description            |
| :------------------------- | :--------------------- |
| [no-foo](rules/no-foo.mdx) | Description of no-foo. |

{/* end auto-generated rules list */}
## Configs
{/* begin auto-generated configs list */}

|    | Name               |
| :- | :----------------- |
| ✅  | \`test/recommended\` |

{/* end auto-generated configs list */}"
`;

exports[`generate (configs list) > for mdx files > with --ignore-config > generates the documentation 1`] = `
"## Rules
{/* begin auto-generated rules list */}

| Name                       | Description            |
| :------------------------- | :--------------------- |
| [no-foo](rules/no-foo.mdx) | Description of no-foo. |

{/* end auto-generated rules list */}
## Configs
{/* begin auto-generated configs list */}

|    | Name          |
| :- | :------------ |
| ✅  | \`recommended\` |

{/* end auto-generated configs list */}"
`;

exports[`generate (configs list) > for mdx files > with configs not defined in alphabetical order > generates the documentation 1`] = `
"## Rules
{/* begin auto-generated rules list */}

| Name                       | Description            |
| :------------------------- | :--------------------- |
| [no-foo](rules/no-foo.mdx) | Description of no-foo. |

{/* end auto-generated rules list */}
## Configs
{/* begin auto-generated configs list */}

|    | Name          |
| :- | :------------ |
|    | \`foo\`         |
| ✅  | \`recommended\` |

{/* end auto-generated configs list */}"
`;
